--- a/12-Advanced Python Modules/Excercise/07-Unzipping-and-Zipping-Files.ipynb
+++ b/12-Advanced Python Modules/Excercise/07-Unzipping-and-Zipping-Files.ipynb
@@ -1241,10 +1241,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_extract = \"C:\\\\Users\\Abdul\\\\Documents\\\\GitHub\\\\Complete-Python-3-Bootcamp\\\\12-Advanced Python Modules\\\\Excercise\\\\deflated_content\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shutil.unpack_archive(\"example.zip\", extract_dir=folder_extract, format='zip')"
+   ]
   },
   {
    "cell_type": "code",
